bottom overlaping issue fixed after apply ag grid spacing

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -2765,7 +2765,7 @@ input:disabled{
   margin: 0 -30px -15px;
 }
 .add-min-height{
-  min-height: calc(100vh - 298px);
+  min-height: calc(100vh - 275px);
 }
 .role-permision-page{
   .add-min-height{
@@ -6827,5 +6827,17 @@ left: 17rem;
     .rm-part-name {
       border-top: transparent !important;
     }
+  }
+}
+.break-word {
+  word-break: break-word !important;
+}
+
+.popup-content {
+  z-index: 1301 !important;
+}
+.simulation-edit {
+  .height-width-wrapper {
+    min-height: calc(100vh - 288px) !important;
   }
 }
